# DistributedGP

./: .travis.yml  Cargo.toml  README.md  operators.xml
distrGP_Evaluator/: Cargo.toml
distrGP_Evaluator/src/: execution_loop.rs  lib.rs  pool.rs
distrGP_Evaluator/src/enviroment/: mod.rs  pool.rs
distrGP_Evaluator/src/server/: mod.rs  servermessage.rs
distrGP_FFI/: Cargo.toml
distrGP_FFI/src/: lib.rs
distrGP_Generator/: Cargo.toml
distrGP_Generator/src/: bichannel.rs  geneticoperator.rs  individualcomm.rs  lib.rs  selectortrait.rs  state.rs
distrGP_Generator/src/graph/: mod.rs
distrGP_Generator/src/operator/: mod.rs  operator_compiler.rs  operator_generator.rs
distrGP_Generator/src/operator/operator_compiler/: compiler.rs  mod.rs  xml_parser.rs
distrGP_Generator/src/reproduce/: mod.rs
distrGP_ProvidedOperators/: Cargo.toml
distrGP_ProvidedOperators/src/: lib.rs  operators.rs
distrGP_ProvidedOperators/src/geneticoperators/: crossover.rs  grow.rs  holder  mod.rs  mutate.rs  operatorflux.rs
distrGP_ProvidedOperators/src/selectors/: mod.rs  tournament.rs  truncate.rs
distrGP_RustCompiler/: Cargo.toml
distrGP_RustCompiler/src/: lib.rs
distrGP_Util/: Cargo.toml
distrGP_Util/src/: lib.rs  visualize.rs
distrGP_util/: Cargo.toml  visualize.rs
distrGP_util/src/: lib.rs  visualize.rs
matlabscripts/: README.md  average_partial.m  graph_length.m  infinite_count.m  median_graph.m  read_csv.m  test_graph.m
src/: main.rs  operators.json  operators.prs  operators.xml  reader.rs  servermessage.rs
src/IO/: place_holder.rs
src/UI_backend/: place_holder.rs
src/client/: envmessage.rs  mod.rs
src/client/enviroment/: mod.rs
src/enviroment/: mod.rs
src/geneticoperators/: crossover.rs  mutate.rs
src/operators/: addition.rs
src/selectors/: mod.rs  tournament.rs  truncate.rs
src/server/: mod.rs  reader.rs
src/server/generator/: mod.rs  probabilties.rs  selectortrait.rs
src/server/generator/converter/: mod.rs
src/server/generator/graph/: mod.rs  visualize.rs
src/server/generator/operator/: mod.rs
src/server/generator/reproduce/: crossover.rs  mod.rs  mutate.rs
src/server/generator/reproduce/selector/: mod.rs  truncation.rs
