[package]

name = "gp_project"
version = "0.0.1"
authors = ["Edward Clarke <ec10g11@soton.ac.uk>"]

[dependencies]
rand = "0.3.8"
csv = "0.14.2"
dot = "0.0.4"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
