[package]

name = "distrgp_testimpl"
version = "0.0.1"
authors = ["Edward Clarke <webmobster@gmail.com>"]
description = "Experimental GP project"
documentation = "http://blank.blank"
homepage = "https://github.com/webmobster/DistributedGP"
repository = "https://github.com/webmobster/DistributedGP"
readme = "README.md"
keywords = ["GP", "Genetic Programming", "Machine Learning", "ML"]
license = "Private for now"

[dependencies]
rand = "0.3.8"
csv = "0.14.2"
dot = "0.0.4"
env_logger = "0.3.1"
log= "*"

[dependencies.distrgp_generator]
path = "./distrGP_Generator"

[dependencies.distrgp_providedoperators]
path = "./distrGP_ProvidedOperators"

[dependencies.distrgp_evaluator]
path = "./distrGP_Evaluator"

[dependencies.distrgp_util]
path = "./distrGP_util"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
