[package]

name = "distrgp_rustcompiler"
version = "0.0.1"
authors = ["Edward Clarke <webmobster@gmail.com>"]
description = "Experimental GP project"
documentation = "http://blank.blank"
homepage = "https://github.com/webmobster/DistributedGP"
repository = "https://github.com/webmobster/DistributedGP"
readme = "README.md"
keywords = ["GP", "Genetic Programming", "Machine Learning", "ML"]
license = "Private for now"

[dependencies]
log = "*"
shared_library = "0.1.2"


[dependencies.distrgp_generator]
path = "../distrGP_Generator"

[lib]
name = "distrgp_rustcompiler"



# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
